# api_v2/views.py
@@ -1,7 +1,8 @@
+from django.contrib.auth.models import User
+from django.db import IntegrityError
 from django.http import Http404, JsonResponse
-from django.utils.decorators import method_decorator
-from django.views.decorators.cache import cache_page
-from rest_framework import status
+from rest_framework import status, serializers
+from rest_framework.permissions import AllowAny, IsAuthenticatedOrReadOnly
 from rest_framework.response import Response
 from rest_framework.views import APIView
 
@@ -9,8 +10,28 @@ from api_v2.models import Book, Author
 from .serializers import BookSerializer, AuthorSerializer
 
 
+class RegistrationView(APIView):
+    permission_classes = [AllowAny]
+
+    def post(self, request):
+        username = request.data.get("username")
+        password = request.data.get("password")
+        if username and password:
+            try:
+                User.objects.create_user(username=username, password=password)
+                return Response({"success": "You have been successfully registered"},
+                                status=status.HTTP_200_OK)
+            except IntegrityError:
+                raise serializers.ValidationError("Username already exists")
+        else:
+            return Response(
+                {"error": "Please enter valid username and password"},
+                status=status.HTTP_400_BAD_REQUEST)
+
+
 class BookList(APIView):
-    @method_decorator(cache_page(60 * 5))
+    permission_classes = [IsAuthenticatedOrReadOnly]
+
     def get(self, request):
         data = Book.objects.all()
         serializer = BookSerializer(data, many=True)
@@ -38,6 +59,8 @@ class BookList(APIView):
 
 
 class BookID(APIView):
+    permission_classes = [IsAuthenticatedOrReadOnly]
+
     def check_id(self, id):
         try:
             return Book.objects.get(id=id)
@@ -79,7 +102,8 @@ class BookID(APIView):
 
 
 class AuthorList(APIView):
-    @method_decorator(cache_page(60 * 5))
+    permission_classes = [AllowAny]
+
     def get(self, request):
         data = Author.objects.all()
         serializer = AuthorSerializer(data, many=True)
@@ -87,6 +111,8 @@ class AuthorList(APIView):
 
 
 class AuthorID(APIView):
+    permission_classes = [AllowAny]
+
     def get(self, request, id):
         try:
             author = Author.objects.get(id=id)
